--- a/src/style/card.css
+++ b/src/style/card.css
@@ -1,7 +1,9 @@
+@import url("./variables.css");
+
 .card-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 10px; 
+  gap: 10px;
   justify-content: flex-start;
   margin: 0 auto;
   width: fit-content;
@@ -9,17 +11,27 @@
 
 .card-item {
   list-style-type: none;
-  border: 1px solid black;
-  border-radius: 12px;
+  border: 2px solid rgba(0, 0, 0, 0.377);
+  border-radius: 8px;
   display: block;
   flex: 0 0 calc(28% - 10px);
   box-sizing: border-box;
   text-align: center;
   max-width: 300px;
   min-width: 200px;
-  margin: 0; 
-}
+  padding: 10px 0 20px 0;
+  margin: 0;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s;
 
+}
+.card-item:hover {
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.422); 
+}
+.card_a_item {
+  color: var(--text-color);
+
+}
 .logo {
   width: 200px;
   height: 200px;
@@ -29,10 +41,52 @@
 
 .product-name {
   font-weight: bold;
+  margin: 10px 0;
   font-size: large;
 }
-.add-to-card-button{
-    padding: 20px;
-    display: block;
-    background-color: blanchedalmond;
+.infor-card {
+  display: flex;
+  margin: 10px auto;
+  justify-content: space-around;
+}
+.add-to-card-button {
+  padding: 10px;
+  display: block;
+  border-radius: 12px;
+  width: 45%;
+  border: 2px var(--button-color) solid;
+  display: flex;
+  color: var(--button-color);
+
+  justify-content: space-between;
+  font-size: smaller;
+  transition: 0.3s;
+  align-items: center;
+  
+
+}
+.add-to-card-button:hover {
+  background-color: var(--primary-color);
+  border: 2px var(--primary-color) solid;
+  color: var(--text-color-button-hover);
+}
+.product_price {
+  font-size: large;
+  font-weight: bolder;
+  color: var(--primary-color);
+}
+.cart_plus,
+.HeartIcon {
+  width: 20px;
+
+  height: 20px;
+}
+.cart_and_heart_icon {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.button_text{
+  text-decoration: none;
 }
