--- a/src/style/menu.css
+++ b/src/style/menu.css
@@ -2,6 +2,7 @@
 *{
     margin: 0;
     padding: 0;
+    /* border: 1px solid black; */
     /* background-color: var(--background-color); */
 }
 #menu-header{
@@ -9,11 +10,15 @@
     height: 70px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+}
+.logo_menu{
+  width: 65px;
+  margin-left: 20px;
 }
 #menu-ul-header{
     display: flex;
-    justify-content: center;
+    
 
 }
 .menu-li-header{
@@ -38,7 +43,7 @@
 
 .search_container{
   position: relative;
-  
+
   display: flex;
 align-items: center;
 }
